--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
             
             <div class="info-grid">
                 <div class="info-card">
-                    <h3>📅 Update Schedule</h3>
-                    <p>Every Monday at 6:00 AM UTC</p>
+                    <h3>📦 Returned Data</h3>
+                    <p>Selected Date +6 days = 7 day return</p>
                 </div>
                 <div class="info-card">
                     <h3>📈 Data Points</h3>
