--- a/index.html
+++ b/index.html
@@ -391,7 +391,6 @@
             <div class="info-grid">
                 <div class="info-card">
                     <h3>📊 <span id="eventCount">Loading...</span> Events</h3>
-                    <p>7-day window from selected date</p>
                 </div>
             </div>
             
@@ -422,7 +421,7 @@
                     <div class="left-column">
                         <div class="date-inputs">
                             <div class="input-group">
-                                <label for="startDate">Date:</label>
+                                <label for="startDate">7-day window from selected date:</label>
                                 <input type="date" id="startDate" value="">
                             </div>
                         </div>
