small layout tweaks

--- a/index.html
+++ b/index.html
@@ -435,18 +435,15 @@
                         </div>
                     </div>
                     <div class="quick-links">
-                        <h4>Quick Links</h4>
-                        <strong>Days</strong>
+                        <strong>Quick Links</strong>
                         <a href="#" onclick="fetchQuick('day','yesterday');return false;">Yesterday</a>
                         <a href="#" onclick="fetchQuick('day','today');return false;">Today</a>
                         <a href="#" onclick="fetchQuick('day','tomorrow');return false;">Tomorrow</a>
                         <hr style="border:none;border-top:1px solid #e9ecef;margin:10px 0;">
-                        <strong>Weeks</strong>
                         <a href="#" onclick="fetchQuick('week','last');return false;">Last Week</a>
                         <a href="#" onclick="fetchQuick('week','this');return false;">This Week</a>
                         <a href="#" onclick="fetchQuick('week','next');return false;">Next Week</a>
                         <hr style="border:none;border-top:1px solid #e9ecef;margin:10px 0;">
-                        <strong>Months</strong>
                         <a href="#" onclick="fetchQuick('month','last');return false;">Last Month</a>
                         <a href="#" onclick="fetchQuick('month','this');return false;">This Month</a>
                         <a href="#" onclick="fetchQuick('month','next');return false;">Next Month</a>
