--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
            
             <div class="info-grid">
                 <div class="info-card">
-                    <h3>📊 <span id="eventCount">Loading...</span> Events</h3>
+                    <h3>📊 <span id="eventCount">Loading...</span></h3>
                 </div>
             </div>
             
