--- a/index.html
+++ b/index.html
@@ -445,12 +445,7 @@
             </div>
 
             <div class="data-preview">
-                <h2>📊 Data Preview (All Events)</h2>
-                <div class="info-grid">
-                    <div class="info-card">
-                        <h3>📊 <span id="eventCount">Loading...</span></h3>
-                    </div>
-                </div>
+                <h2>📊 Data Preview (<span id="eventCount">Loading...</span>)</h2>
                 <div id="tableContainer" class="loading">
                     Loading data...
                 </div>
