--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 <body>
     <div class="container">
         <header>
-            <h2>📊 Forex Forex Factory Data Scraper</h2>
+            <h2>📊 Forex Factory Data Scraper</h2>
             <div class="last-update" id="lastUpdate">Loading...</div>
 
             <div class="buttons">
