--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     </svg>
                     View on GitHub
                 </button>
-                <button class="btn-secondary" onclick="viewVersionHistory()">
+                <button class="btn-secondary" onclick="viewChangeHistory()">
                     📝 Change History
                 </button>
             </div>
@@ -590,7 +590,7 @@
             window.open(githubUrl, '_blank');
         }
         
-        function viewVersionHistory() {
+        function viewChangeHistory() {
             window.open('change-history.html', '_blank');
         }
         
