change button text

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <div class="preview-header">
     <h2>📊 Detailed Data Preview (<span id="eventCount">Loading...</span>)</h2>
     <button class="btn-open-ff" onclick="openInForexFactory()" title="Open this view in ForexFactory">
-      🔗 Open in FF
+      🔗 Open in Forex Factory
     </button>
   </div>
                 <div class="pagination-controls" id="paginationControls" style="display: none;">
