button text change

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
   <div class="preview-header">
     <h2>📊 Detailed Data Preview (<span id="eventCount">Loading...</span>)</h2>
     <button class="btn-open-ff" onclick="openInForexFactory()" title="Open this view in Forex Factory">
-      🔗 Open in Forex Factory
+      🔗 Open FIRST week/month in Forex Factory
     </button>
   </div>
                 <div class="pagination-controls" id="paginationControls" style="display: none;">
