fixed load selcted

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <!-- Load Button -->
                     <div class="button-stack">
                       <button class="btn-load" onclick="loadSelectedPeriods()">
-                        ⤵️ Load Selected Periods
+                        ⤵️ Load Selected
                       </button>
                       <button class="btn-clear-all" onclick="clearAllSelections()">
                         🗑️ Clear All
